Main: move settings to side drawer

--- a/src/main/resources/GameMasterView.fxml
+++ b/src/main/resources/GameMasterView.fxml
@@ -1,197 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.*?>
-<?import com.jfoenix.validation.*?>
+<?import com.jfoenix.validation.IntegerValidator?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import org.controlsfx.glyphfont.*?>
+<?import org.controlsfx.glyphfont.Glyph?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1"
             prefWidth="600.0"
             xmlns="http://javafx.com/javafx/8.0.171">
     <bottom>
         <HBox BorderPane.alignment="CENTER">
             <children>
-                <VBox fx:id="vb_gmv_settings"
-                      prefWidth="300.0"
-                      spacing="8.0"
-                      HBox.hgrow="ALWAYS">
-                    <children>
-                        <Label text="%title_picture" />
-                        <VBox spacing="8.0">
-                            <children>
-                                <VBox spacing="4.0">
-                                    <children>
-                                        <Label text="%title_unblur_duration" />
-                                        <StackPane>
-                                            <children>
-                                                <HBox alignment="CENTER_RIGHT"
-                                                      spacing="4.0">
-                                                    <children>
-                                                        <JFXButton fx:id="btn_gmv_unblur_duration_up"
-                                                                   prefHeight="24.0"
-                                                                   prefWidth="24.0">
-                                                            <padding>
-                                                                <Insets bottom="0.0"
-                                                                        left="0.0"
-                                                                        right="0.0"
-                                                                        top="0.0" />
-                                                            </padding>
-                                                            <graphic>
-                                                                <Glyph fontFamily="FontAwesome"
-                                                                       icon="PLUS" />
-                                                            </graphic>
-                                                        </JFXButton>
-                                                        <JFXButton fx:id="btn_gmv_unblur_duration_down"
-                                                                   prefHeight="24.0"
-                                                                   prefWidth="24.0">
-                                                            <padding>
-                                                                <Insets bottom="0.0"
-                                                                        left="0.0"
-                                                                        right="0.0"
-                                                                        top="0.0" />
-                                                            </padding>
-                                                            <graphic>
-                                                                <Glyph fontFamily="FontAwesome"
-                                                                       icon="MINUS" />
-                                                            </graphic>
-                                                        </JFXButton>
-                                                    </children>
-                                                    <StackPane.margin>
-                                                        <Insets />
-                                                    </StackPane.margin>
-                                                </HBox>
-                                                <JFXTextField fx:id="tf_gmv_unblur_duration"
-                                                              text="10">
-                                                    <validators>
-                                                        <IntegerValidator />
-                                                    </validators>
-                                                    <StackPane.margin>
-                                                        <Insets right="56.0" />
-                                                    </StackPane.margin>
-                                                </JFXTextField>
-                                            </children>
-                                        </StackPane>
-                                    </children>
-                                </VBox>
-                                <VBox spacing="4.0">
-                                    <children>
-                                        <Label text="%title_minimum_blur" />
-                                        <StackPane>
-                                            <children>
-                                                <HBox alignment="CENTER_RIGHT"
-                                                      spacing="4.0">
-                                                    <children>
-                                                        <JFXButton fx:id="btn_gmv_min_blur_up"
-                                                                   prefHeight="24.0"
-                                                                   prefWidth="24.0">
-                                                            <padding>
-                                                                <Insets bottom="0.0"
-                                                                        left="0.0"
-                                                                        right="0.0"
-                                                                        top="0.0" />
-                                                            </padding>
-                                                            <graphic>
-                                                                <Glyph fontFamily="FontAwesome"
-                                                                       icon="PLUS" />
-                                                            </graphic>
-                                                        </JFXButton>
-                                                        <JFXButton fx:id="btn_gmv_min_blur_down"
-                                                                   prefHeight="24.0"
-                                                                   prefWidth="24.0">
-                                                            <padding>
-                                                                <Insets bottom="0.0"
-                                                                        left="0.0"
-                                                                        right="0.0"
-                                                                        top="0.0" />
-                                                            </padding>
-                                                            <graphic>
-                                                                <Glyph fontFamily="FontAwesome"
-                                                                       icon="MINUS" />
-                                                            </graphic>
-                                                        </JFXButton>
-                                                    </children>
-                                                    <StackPane.margin>
-                                                        <Insets />
-                                                    </StackPane.margin>
-                                                </HBox>
-                                                <JFXTextField fx:id="tf_gmv_min_blur"
-                                                              text="20">
-                                                    <validators>
-                                                        <IntegerValidator />
-                                                    </validators>
-                                                    <StackPane.margin>
-                                                        <Insets right="56.0" />
-                                                    </StackPane.margin>
-                                                </JFXTextField>
-                                            </children>
-                                        </StackPane>
-                                    </children>
-                                </VBox>
-                                <VBox spacing="4.0">
-                                    <children>
-                                        <Label text="%title_maximum_blur" />
-                                        <StackPane>
-                                            <children>
-                                                <HBox alignment="CENTER_RIGHT"
-                                                      spacing="4.0">
-                                                    <children>
-                                                        <JFXButton fx:id="btn_gmv_max_blur_up"
-                                                                   prefHeight="24.0"
-                                                                   prefWidth="24.0">
-                                                            <padding>
-                                                                <Insets bottom="0.0"
-                                                                        left="0.0"
-                                                                        right="0.0"
-                                                                        top="0.0" />
-                                                            </padding>
-                                                            <graphic>
-                                                                <Glyph fontFamily="FontAwesome"
-                                                                       icon="PLUS" />
-                                                            </graphic>
-                                                        </JFXButton>
-                                                        <JFXButton fx:id="btn_gmv_max_blur_down"
-                                                                   prefHeight="24.0"
-                                                                   prefWidth="24.0">
-                                                            <padding>
-                                                                <Insets bottom="0.0"
-                                                                        left="0.0"
-                                                                        right="0.0"
-                                                                        top="0.0" />
-                                                            </padding>
-                                                            <graphic>
-                                                                <Glyph fontFamily="FontAwesome"
-                                                                       icon="MINUS" />
-                                                            </graphic>
-                                                        </JFXButton>
-                                                    </children>
-                                                    <StackPane.margin>
-                                                        <Insets />
-                                                    </StackPane.margin>
-                                                </HBox>
-                                                <JFXTextField fx:id="tf_gmv_max_blur"
-                                                              text="100">
-                                                    <validators>
-                                                        <IntegerValidator />
-                                                    </validators>
-                                                    <StackPane.margin>
-                                                        <Insets right="56.0" />
-                                                    </StackPane.margin>
-                                                </JFXTextField>
-                                            </children>
-                                        </StackPane>
-                                    </children>
-                                </VBox>
-                            </children>
-                        </VBox>
-                    </children>
-                    <padding>
-                        <Insets bottom="16.0"
-                                left="16.0"
-                                right="16.0"
-                                top="16.0" />
-                    </padding>
-                </VBox>
                 <VBox prefWidth="300.0"
                       HBox.hgrow="ALWAYS">
                     <children>
